2000-02-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	(PlaceAgain_func):
	* fvwm/placement.h:
	* fvwm/add_window.c (setup_window_placement):
	made PlaceAgain work as documented in the man page
	fixed bug causing windows to be placed off screen

	* fvwm/menus.c (paint_item):
	(NewMenuStyle):
	ActiveColorset doesn't force a hilit background anymore

	* fvwm/borders.c:
	* fvwm/builtins.c:
	* fvwm/screen.h (ScreenInfo):
	renamed global cur_decor to Scr.cur_decor

	* fvwm/functions.h:
	* fvwm/functions.c:
	(ExecuteFunction):
	issue a warning when trying to add illegal commands to a decor

	* fvwm/builtins.c (SetHiColor):
	fixed typo

	* fvwm/fvwm2.1:
	more work on man page rewrite

2000-02-06  Darren Stuart Embry  <dsembr01@slug.louisville.edu>

	* fvwm/menus.h (MenuLook):
	* fvwm/menus.c (paint_item):
	(FreeMenuStyle):
	(UpdateMenuStyle):
	ActiveColorstyle relief and shadow colors are now used in menus.

2000-02-08  Chris Rankin  <rankinc@zipworld.com.au>

	* fvwm/module_interface.c (PositiveWrite)
	Increased the "dead module" timeout to 5 seconds to save FvwmAnimate

2000-02-07  olicha	<olivier.chapuis@free.fr>

	* fvwm/virtual.c (checkPanFrames):
	Fixed check pan frames if y edgescroll is 0 and x  edgescroll is not
	0 (and conversely)

2000-02-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed issuing SlipperyIcon/StickyIcon at run time

2000-02-05  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/menus.c (paint_item): fixed the text y coordinate in
	non-first titles.
	* fvwm/windowlist.c (do_windowList): removed a space in geometry
	* fvwm/functions.c (expand): fixed the core dump on the expanding
	of several variables, something like: + I All ($r) Iconify $0

2000-02-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (DoSetFocus):
	windows that have the InputFocus hint set to false are not hilighted
	against their will if 'Lenience' isn't used

	* fvwm/screen.h (struct):